# fastapi_boilerplate

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commir-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  extensions.json  launch.json  pyproject.toml  pytest.ini  requirements.txt  settings.json  setup.cfg
alembic/: env.py
src/: main.py
src/api/dependencies/: auth.py  pagination.py
src/api/v1/: __init__.py  auth.py  health.py  posts.py  users.py
src/core/: __init__.py  config.py  database.py  logging.py  redis.py  security.py
src/middleware/: __init__.py
src/models/: __init__.py  post.py  user.py
src/repositories/: __init__.py  post.py  user.py
src/schemas/: __init__.py  auth.py  common.py  post.py  user.py
tests/: conftest.py  test_auth.py  test_users.py
