[metadata]
name = fastapi-production
version = attr: src.__version__
description = Production-ready FastAPI application
long_description = file: README.md
long_description_content_type = text/markdown
author = Ilkhom Khafizov
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Framework :: FastAPI
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find:
package_dir =
    = src
zip_safe = False
include_package_data = True
install_requires =
    fastapi>=0.115.0
    uvicorn[standard]>=0.32.0
    greenlet>=3.2.0
    sqlalchemy>=2.0.0
    asyncpg>=0.30.0
    alembic>=1.14.0
    pydantic>=2.10.0
    pydantic-settings>=2.6.0
    redis>=5.2.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4

[options.packages.find]
where = src
exclude =
    tests*
    testing*
    docs*

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-asyncio>=0.24.0
    pytest-cov>=6.0.0
    pytest-mock>=3.14.0
    ruff>=0.8.0
    mypy>=1.13.0
    black>=24.0.0
    pre-commit>=4.0.0
    ipython>=8.0.0
test =
    pytest>=8.0.0
    pytest-asyncio>=0.24.0
    pytest-cov>=6.0.0
    faker>=30.0.0
    factory-boy>=3.3.0
docs =
    mkdocs>=1.6.0
    mkdocs-material>=9.5.0
    mkdocstrings[python]>=0.26.0

[options.entry_points]
console_scripts =
    fastapi-production = src.main:main

# ============================================================================
# Flake8 Configuration (if needed for legacy support)
# ============================================================================
[flake8]
max-line-length = 100
max-complexity = 10
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg,
    .venv,
    venv,
    alembic/versions,
ignore =
    E203,  # whitespace before ':'
    W503,  # line break before binary operator
    E501,  # line too long (handled by black)
    E402,  # module level import not at top of file
per-file-ignores =
    __init__.py: F401
    tests/*: S101

# ============================================================================
# Pylint Configuration (if needed)
# ============================================================================
[pylint]
max-line-length = 100
disable =
    C0111,  # missing-docstring
    C0103,  # invalid-name
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    W0212,  # protected-access
    C0301,  # line-too-long
    C0114,  # missing-module-docstring
    C0115,  # missing-class-docstring
    C0116,  # missing-function-docstring
good-names = i,j,k,ex,_,id,db
extension-pkg-whitelist = pydantic

[pylint.MASTER]
ignore = alembic,tests

[pylint.MESSAGES CONTROL]
enable = 
    use-symbolic-message-instead,
    useless-suppression,
    fixme,

# ============================================================================
# Setuptools Configuration
# ============================================================================
[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[check]
metadata = true
strict = true

[egg_info]
tag_build = 
tag_date = 0